# tas_powertek

./: .gitignore  DEVELOPMENT.md  README.md
aws/: CMakeLists.txt  CMakePresets.json  DynamoStore.cpp  DynamoStore.h  README.md  cloudshell_setup.sh  spf21ytester.cpp  vcpkg-configuration.json  vcpkg.json
tas_powertek/spf-21y/: CMakeLists.txt  CMakePresets.json  Enums.cpp  Enums.h  IntervalData.h  Record.cpp  Record.h  RecordData.h  Response.cpp  Response.h  vcpkg.json
tas_powertek/spf-21y/data/: AuxFnData.cpp  AuxFnData.h  BankStatusData.cpp  BankStatusData.h  DailyData.cpp  DailyData.h  EventData.cpp  EventData.h  FaultData.cpp  FaultData.h  IntervalData128.cpp  IntervalData128.h  IntervalData256.cpp  IntervalData256.h  IntervalData512.cpp  IntervalData512.h  IntervalData64.cpp  IntervalData64.h  RealTimeData.cpp  RealTimeData.h  StrongType.h  TimeData.cpp  TimeData.h  UserSettingData.cpp  UserSettingData.h
tas_powertek/spf-21y/detail/: CheckSum.h
tas_powertek/spf-21y/test/: AuxFnDataTest.cpp  BankStatusDataTest.cpp  CheckSumTest.cpp  DailyDataTest.cpp  EnumTest.cpp  EventDataTest.cpp  FaultDataTest.cpp  IntervalData128Test.cpp  IntervalData256Test.cpp  IntervalData512Test.cpp  IntervalData64Test.cpp  RecordTest.cpp  ResponseTest.cpp  TimeDataTest.cpp  UserSettingDataTest.cpp
